# tribute-donation-telegram-bot

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.local.yml  docker-compose.prod.yml  docker-entrypoint.sh  pyproject.toml
.claude/plans/: 2026-05-07-camera-fundraiser-bot-design.md  2026-05-07-camera-fundraiser-bot-plan.md
.github/workflows/: docker-publish.yml
alembic/: env.py
alembic/versions/: 432da6cbf8c4_initial.py  a3f1c2d4e5f6_dedup_by_tribute_event_created_at.py  f4d44970a477_add_fundraiser_topic_id.py
caddy/: .env.example  Caddyfile  docker-compose.yml
scripts/: preview.py
src/: __main__.py  __meta__.py  main.py
src/api/: __init__.py  dependencies.py
src/api/enums/: __init__.py  tribute_request_type.py
src/api/routers/: __init__.py  telegram.py  tribute.py
src/api/types/: __init__.py  base.py  donation_payload.py  tribute_request.py
src/api/utils/: __init__.py  parser.py  signature.py
src/callback_data/: __init__.py  fundraiser.py
src/common/: __init__.py  constants.py  templates.py
src/common/config/: __init__.py  environment.py
src/common/config/types/: __init__.py  admin.py  app.py  base.py  bot.py  digest.py  fundraiser.py  postgres.py  redis.py  tribute.py
src/common/utils/: __init__.py  datetime.py  formatting.py  logging.py  telegram.py
src/database/: __init__.py  session.py
src/database/models/: __init__.py  donation.py  fundraiser.py  mixins.py
src/database/repositories/: __init__.py  donation.py  fundraiser.py
src/filters/: __init__.py  is_admin.py  is_alert_group.py  is_private.py
src/keyboards/: __init__.py
src/keyboards/inline/: __init__.py  donate.py  fundraiser_create.py
src/middlewares/: throttling.py
src/routers/: __init__.py
src/routers/admin/: __init__.py  export.py  fundraiser.py
src/routers/group/: __init__.py
src/routers/group/messages/: __init__.py  stats.py
src/routers/private/: __init__.py
src/routers/private/messages/: start.py
src/services/: __init__.py  command.py  digest.py  donation.py  fundraiser.py  notification_queue.py  scheduler.py
src/states/: __init__.py  fundraiser.py
src/templates/: daily_announcement.html.j2  daily_digest.html.j2  donation_alert.html.j2  fundraiser_admin_close.html.j2  fundraiser_already_active.html.j2  fundraiser_announcement.html.j2  fundraiser_ask_end_date.html.j2  fundraiser_ask_target.html.j2  fundraiser_ask_title.html.j2  fundraiser_ask_topic.html.j2  fundraiser_cancelled.html.j2  fundraiser_close_confirm.html.j2  fundraiser_closed_ok.html.j2  fundraiser_completed.html.j2  fundraiser_confirm.html.j2  fundraiser_created.html.j2  fundraiser_menu_active.html.j2  fundraiser_menu_empty.html.j2  fundraiser_progress.html.j2  invalid_date.html.j2  invalid_target.html.j2  invalid_title.html.j2  invalid_topic.html.j2  no_active_fundraiser.html.j2  no_donations.html.j2  start.html.j2
tests/: conftest.py
tests/e2e/: test_webhook_flow.py
tests/integration/: test_donation_repo_integration.py
tests/unit/: test_digest.py  test_donation_repository.py  test_formatting.py  test_parser.py  test_signature.py
