[project]
name = "tribute-donation-telegram-bot"
dynamic = ["version"]
description = "Telegram bot for camera-fundraiser via Tribute."
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.27.0",
    "alembic>=1.18.4",
    "apscheduler>=3.11.2",
    "asyncpg>=0.30.0",
    "fastapi>=0.136.0",
    "granian>=2.7.3",
    "greenlet>=3.4.0",
    "loguru>=0.7.3",
    "pydantic-settings>=2.13.1",
    "pytz>=2026.1.post1",
    "redis>=7.4.0",
    "sqlmodel>=0.0.38",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "testcontainers[postgres]>=4.9",
    "ruff>=0.15.11",
]

[tool.ruff]
line-length = 99
target-version = "py313"
exclude = [".git", ".venv", "alembic/versions"]
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "N", "SIM", "C4", "TID", "RET", "S", "BLE", "TRY"]
ignore = ["N805", "UP006", "UP035", "UP045", "TID252", "Q000", "Q003", "E501", "UP046"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.hatch.version]
path = "src/__meta__.py"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --strict-markers"

[tool.coverage.run]
source = ["src"]
omit = ["src/__meta__.py"]

[tool.coverage.report]
show_missing = true
fail_under = 80
