[project]
name = "tribute-donation-telegram-bot"
version = "0.1.0"
description = "Telegram bot for camera-fundraiser via Tribute."
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.27.0",
    "alembic>=1.18.4",
    "apscheduler>=3.11.2",
    "asyncpg>=0.30.0",
    "fastapi>=0.136.0",
    "granian>=2.7.3",
    "greenlet>=3.4.0",
    "jinja2>=3.1.4",
    "loguru>=0.7.3",
    "pydantic-settings>=2.13.1",
    "pytz>=2026.1.post1",
    "redis>=7.4.0",
    "sqlmodel>=0.0.38",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "testcontainers[postgres]>=4.9",
    "ruff>=0.15.11",
    "ty>=0.0.34",
]

[tool.ruff]
line-length = 99
target-version = "py313"
exclude = [".git", ".venv", "alembic/versions"]
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "N", "SIM", "C4", "TID", "RET", "S", "BLE", "TRY"]
ignore = ["N805", "UP006", "UP035", "UP045", "TID252", "Q000", "Q003", "E501", "UP046", "TRY003"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
addopts = "-v --strict-markers"

[tool.coverage.run]
source = ["src"]
omit = ["src/__meta__.py"]

[tool.coverage.report]
show_missing = true
fail_under = 40

[tool.ty.environment]
python-version = "3.13"
python = ".venv"
root = ["."]

[tool.ty.src]
include = ["src", "tests", "alembic"]
exclude = ["alembic/versions"]

[tool.ty.terminal]
output-format = "concise"

# pydantic-settings reads required fields from env at runtime; ty doesn't see that.
[[tool.ty.overrides]]
include = ["src/common/config/environment.py"]

[tool.ty.overrides.rules]
missing-argument = "ignore"

# SQLAlchemy/SQLModel column descriptors are dynamic — ty has no plugin (yet) for them.
[[tool.ty.overrides]]
include = ["src/database/repositories/**", "src/database/models/**"]

[tool.ty.overrides.rules]
unresolved-attribute = "ignore"
invalid-argument-type = "ignore"
no-matching-overload = "ignore"

# redis-py exposes the same command interface for sync & async clients,
# so its stubs return `Awaitable[T] | T` even though the async client always awaits.
[[tool.ty.overrides]]
include = ["src/services/notification_queue.py"]

[tool.ty.overrides.rules]
invalid-await = "ignore"
